Fixed testimonial to form spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -599,6 +599,7 @@
 
             #testimonials {
                 margin-top: -40px;
+                margin-bottom: -125px;
             }
         }
 
